--- a/src/components/Switch/Switch.module.scss
+++ b/src/components/Switch/Switch.module.scss
@@ -5,6 +5,7 @@
     display: inline-block;
     width: 56px;
     height: 29px;
+    z-index: 3;
 
 
     @media screen and (max-width: variables.$breakpoint-tablette) {
@@ -51,10 +52,10 @@
     left:0;
     right:0;
     bottom: 0;
-    border-radius: 20px;
+    border-radius: variables.$big-radius;
     
     & i{
-        color: black;
+        color: variables.$light-contrast-color;
         position: absolute;
         top: 7px;
         z-index: 1;
@@ -84,7 +85,7 @@
         width: calc(50% - 6px);
         left: 3px;
         bottom: 3px;
-        border-radius: 20px;
+        border-radius: variables.$big-radius;
         background-color: rgb(7, 33, 110);
         transition: 0.4s;
         z-index: 2;
@@ -104,6 +105,6 @@
     }
 
     &--dark{
-        background-color: white;
+        background-color: variables.$dark-contrast-color;
     }
 }
