--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,14 +1,16 @@
-$primary-color: white;
-$secondary-color: #13589f;
-$tertiary-color: violet;
+$primary-color: #13589f;
+$secondary-color: violet;
 $fourth-color: #F6F6F6;
 $footer-color: #000000;
+
+$dark-contrast-color: white;
+$light-contrast-color: black;
 
 $text-font: 'Saira Semi Condensed';
 
 $small-radius: 5px;
 $medium-radius: 10px;
-$big-radius: 25px;
+$big-radius: 20px;
 
 
 
